search bar kinda working not really

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -29,6 +29,11 @@
     {# 1ste row met de header 12 -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
     <div class="mb-4">
     <div id="background-image"  class="pl-5 pt-4" style="height: 700px"> 
+
+        <form action="index.php" method="GET">
+            <input type="text" name="search">
+            <input type="submit">
+        </form>
     
         <div class="menu">
             <div class="menu-trigger"> <i class="fa fa-bars fa-4x"> </i>
