--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -30,7 +30,7 @@
     <div class="mb-4">
     <div id="background-image"  class="pl-5 pt-4" style="height: 700px"> 
 
-        <form action="index.php" method="GET">
+        <form action="index.php" method="GET">      {# ?action=searchfunction #}
             <input type="text" name="search">
             <input type="submit">
         </form>
