--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -33,8 +33,8 @@
         <form action="index.php" method="GET">      {# ?action=searchfunction #}
 
         <div class="input-container alignment-search-bar">
-            <i class="fa fa-fire alignment-icon-search"></i>
-            <input type="text" class="search-bar" name="search">
+            <i class="fa fa-search fa-lg alignment-icon-search"></i>
+            <input type="text" class="search-bar pl-5 pb-1 pt-1" name="search" placeholder="Zoeken">
             </div>
         </form>
     
