--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -38,10 +38,12 @@
             </div>
         </form>
     
+        {# Dropdown navigation menu #}
         <div class="menu">
             <div class="menu-trigger"> <i class="fa fa-bars fa-4x"> </i>
                 <div class="dropdown">
-                    <a href="http://localhost/educom-verrukkulluk-1668679088/index.php?action=ophalen_boodschappen"><h1> Mijn Boodschappenlijst </h1> </a>
+                    <img src="assets/img/logo-v2.png" class="alignment-navigation-menu-logo" style="height: 150px; width: auto"/>
+                    <a href="http://localhost/educom-verrukkulluk-1668679088/index.php?action=ophalen_boodschappen" class="alignment-navigation-menu no-text-decoration"><h1> Mijn Boodschappenlijst </h1> </a>
                 </div> {# Dropdown #}
             </div> {# menu-trigger #}
         </div> {# menu #}
