--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -55,6 +55,24 @@
                 }) // eindigd ajax functie
 
             }) /// Eindigd click functie
+
+
+
+            // addBoodschappen JS functie 
+            
+            $(".op_lijst").click(function() {
+                $.ajax({      
+                url: `index.php?gerecht_id={{data.0.gerecht.id}}&x=1`,                                        
+                //url: `index.php?user_id=4&action=ophalen_boodschappen`,
+                method: "GET",
+                 }) // eindigd ajax functie
+                 
+
+                //window.location.href = "index.php?user_id=4&action=ophalen_boodschappen";
+                window.location.href = "index.php?user_id=4&action=add_boodschappen";
+                //location.reload(); 
+            }) // Einde click function
+
             
 
         }) //// eindigd document ready
@@ -138,7 +156,7 @@ document.getElementById("defaultOpen").click();
     {# op lijst en favorieten knop #}
     <div class="row">
         <div class="col-md-11">
-            <a href="http://localhost/educom-verrukkulluk-1668679088/index.php?gerecht_id={{data.0.gerecht.id}}&action=add_boodschappen"  style="text-decoration: none"> <div id="smullen" class="smullen_button" style> Op lijst </div> </a>
+           <a href="http://localhost/educom-verrukkulluk-1668679088/index.php?gerecht_id={{data.0.gerecht.id}}&action=add_boodschappen"  style="text-decoration: none"> <div id="smullen" class="smullen_button op_lijst" style> Op lijst </div> </a>
         </div>
         <div class="col-md-1">
             <i class="fa fa-heart fa-2x"></i>
