fa-2xs toegevoegd + stars verbeterd

--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -94,11 +94,11 @@ document.getElementById("defaultOpen").click();
         </div>
         <div class="col-md-4"> 
             <h3> 
-                <span class="star" data-value="1">*</span> 
-                <span class="star" data-value="2">*</span>
-                <span class="star" data-value="3">*</span>
-                <span class="star" data-value="4">*</span>
-                <span class="star" data-value="5">*</span>
+                <span class="star" data-value="1"> <i class="fa fa-star fa-2xs"></i> </span> 
+                <span class="star" data-value="2"> <i class="fa fa-star fa-2xs"></i> </span>
+                <span class="star" data-value="3"> <i class="fa fa-star fa-2xs"></i> </span>
+                <span class="star" data-value="4"> <i class="fa fa-star fa-2xs"></i> </span>
+                <span class="star" data-value="5"> <i class="fa fa-star fa-2xs"></i> </span>
             </h3>
         </div>
     </div>
