--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -76,11 +76,11 @@
             </div> {# Einde titel div #}
             <div class="col-md-6"> 
                 <h3> 
-                    <span class="star-{{record.gerecht.id}}" data-value="1">*</span> {# if functie + class green om dit werkende te krijgen #}
-                    <span class="star-{{record.gerecht.id}}" data-value="2">*</span>      {# Dit heeft een rode hover door de CSS mogelijk een nieuwe star voor de homepage maken #}
-                    <span class="star-{{record.gerecht.id}}" data-value="3">*</span>
-                    <span class="star-{{record.gerecht.id}}" data-value="4">*</span>
-                    <span class="star-{{record.gerecht.id}}" data-value="5">*</span>
+                    <span class="star-{{record.gerecht.id}}" data-value="1"> <i class="fa fa-star fa-2xs"></i> </span> {# if functie + class green om dit werkende te krijgen #}
+                    <span class="star-{{record.gerecht.id}}" data-value="2"> <i class="fa fa-star fa-2xs"></i></span>      {# Dit heeft een rode hover door de CSS mogelijk een nieuwe star voor de homepage maken #}
+                    <span class="star-{{record.gerecht.id}}" data-value="3"> <i class="fa fa-star fa-2xs"></i></span>
+                    <span class="star-{{record.gerecht.id}}" data-value="4"> <i class="fa fa-star fa-2xs"></i></span>
+                    <span class="star-{{record.gerecht.id}}" data-value="5"> <i class="fa fa-star fa-2xs"></i></span>
                 </h3>
             </div> 
         </div> {# einde class row voor de titel en sterren #}
