--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,6 +91,9 @@ h3, h4, h5 {
     text-decoration: none;
 }
 
+.fa-2xs {
+    font-size: .625em; }
+
 /* sterretjes */
 .star {
     font-size: 30px;
