--- a/templates/boodschappen.html.twig
+++ b/templates/boodschappen.html.twig
@@ -52,8 +52,8 @@ document.getElementById("defaultOpen").click();
                 <div class="col-md-1" 
                     style="background-image: url('assets/img/artikelen/{{record.artikel.afbeelding}}'); background-position: center; background-size: cover; height: 125px; width: 125px"> 
                 </div>
-                <div class="col-md-5-6" style="max-width: 500px">
-                    <h2 style="color: #6e8722"> {{record.artikel.naam}} </h2>
+                <div class="col-md-5-6 boodschappen-info-width">
+                    <h2 class="green"> {{record.artikel.naam}} </h2>
                     <div> {{record.artikel.omschrijving}} </div>
                 </div> {# Einde div md-7 #}
                 <div class="col-md-1 green">
