--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -42,13 +42,13 @@
         <div class="menu">
             <div class="menu-trigger"> <i class="fa fa-bars fa-4x"> </i>
                 <div class="dropdown">
-                    <img src="assets/img/logo-v2.png" class="alignment-navigation-menu-logo" style="height: 150px; width: auto"/>
+                    <img src="assets/img/logo-v2.png" class="alignment-navigation-menu-logo menu-dropdown-logo-size"/>
                     <a href="http://localhost/educom-verrukkulluk-1668679088/index.php?action=ophalen_boodschappen" class="alignment-navigation-menu no-text-decoration"><h1> Mijn Boodschappenlijst </h1> </a>
                 </div> {# Dropdown #}
             </div> {# menu-trigger #}
         </div> {# menu #}
 
-        <a href="http://localhost/educom-verrukkulluk-1668679088/index.php"> <img src="assets/img/logo-v2.png" class="text-align-center" style="height: 250px; width: auto"/> </a>         {# Dit gedeelte voegt het logo toe met eenlink naar de homepage#}
+        <a href="http://localhost/educom-verrukkulluk-1668679088/index.php"> <img src="assets/img/logo-v2.png" class="text-align-center main-logo-size"/> </a>         {# Dit gedeelte voegt het logo toe met eenlink naar de homepage#}
         {% block header %}
         {% endblock %}   
     </div> <!-- background-image -->
@@ -84,10 +84,10 @@
                 <img src="assets/img/verrukkulluk-login.png" class="logos center-horizontal mb-2"/>
                 <form id="form" class="ml-4">
                     <div class="white"> Email </div>
-                    <div class="pb-3"> <input type="text" name="name" style="width: 350px"> </div>
+                    <div class="pb-3"> <input type="text" name="name" class="login-input-forms"> </div>
 
                     <div class="white"> Wachtwoord </div>
-                    <div class="pb-4"> <input type="text" name="wachtwoord" style="width: 350px"> </div>
+                    <div class="pb-4"> <input type="text" name="wachtwoord" class="login-input-forms"> </div>
                 </form>
                 <center> <div id="login" class="login_button"> Login </div> </center>                                               {# Login button#}
             </div> 
